# algotrade.io

./: .eslintrc  .gitignore  .nycrc  AGENTS.md  Makefile  README.md  cypress.config.ts  index.html  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts
.github/workflows/: api.yml  ui.yml
amplify/.config/: project-config.json
amplify/backend/: backend-config.json
amplify/backend/types/: amplify-dependent-resources-ref.d.ts
cypress/e2e/: Alerts.spec.cy.ts  Algorithm.spec.cy.ts  Auth.spec.cy.ts  Contact.spec.cy.ts  Docs.spec.cy.ts  Gym.spec.cy.ts  Home.spec.cy.ts  Navigation.spec.cy.ts  Privacy.spec.cy.ts  Subscription.spec.cy.ts  TOS.spec.cy.ts  Template.spec.cy.ts  VRT.spec.cy.ts
cypress/support/: commands.ts  e2e.ts
docs/: coverage_plan.md  uv-migration-plan.md
src/: tokens.ts  utils.tsx
src/api/: README.md  samconfig.toml  shared.yaml  template.yaml  training.ipynb
src/api/account/: Makefile  app.py  pyproject.toml  requirements.txt
src/api/contact/: Makefile  __init__.py  app.py  pyproject.toml
src/api/gym/: Makefile  app.py  pyproject.toml  requirements.txt
src/api/model/: Makefile  app.py  pyproject.toml  requirements.txt
src/api/notify/: Makefile  app.py  buy.html  pyproject.toml  requirements.txt  sell.html  template.html.jinja
src/api/preview/: Makefile  app.py  pyproject.toml  requirements.txt
src/api/shared-core/: __init__.py  pyproject.toml
src/api/shared-db/: __init__.py  pyproject.toml
src/api/shared/python/: auth.py  models.py  utils.py
src/api/signals/: Makefile  app.py  pyproject.toml  requirements.txt
src/api/spec/: swagger.yaml
src/api/subscribe/: Makefile  app.py  pyproject.toml
src/api/test/: conftest.py
src/api/test/account/: test_account.py
src/api/test/contact/: test_contact.py
src/api/test/gym/: test_gym.py
src/api/test/model/: test_model.py
src/api/test/notify/: test_notify.py
src/api/test/preview/: test_preview.py
src/api/test/shared/python/: test_models.py  test_utils.py
src/api/test/signals/: test_signals.py
src/api/test/subscribe/: test_subscribe.py
src/api/test/trade/: test_trade.py
src/api/trade/: Makefile  app.py  pyproject.toml  requirements.txt
src/layouts/: index.tsx
src/pages/alerts/: index.tsx
src/pages/algorithm/: types.ts
src/pages/art/: index.tsx
src/pages/home/: index.tsx
src/pages/tos/: index.tsx
src/pages/trade/: index.tsx
src/types/: declarations.d.ts
src/ui/: index.html  tokens.ts  utils.tsx
src/ui/components/: Toggle.module.less
src/ui/config/: .nycrc.json  cypress-image-diff.config.cjs  cypress.config.ts  eslint.config.json  tsconfig.json  vite.config.ts
src/ui/contexts/: AccountContext.ts  index.ts
src/ui/hooks/: index.ts  useApi.ts
src/ui/layouts/: DisclaimerModal.tsx  Footer.tsx  Header.styles.ts  Header.tsx  config.tsx  index.module.less  index.tsx
src/ui/pages/alerts/: index.module.less  index.tsx
src/ui/pages/algorithm/: index.module.less  index.tsx
src/ui/pages/art/: index.tsx
src/ui/pages/contact/: index.module.less  index.tsx
src/ui/pages/docs/: index.less  index.module.less  index.tsx
src/ui/pages/gym/: index.tsx
src/ui/pages/home/: index.module.less  index.tsx
src/ui/pages/privacy/: index.tsx
src/ui/pages/subscription/: index.module.less  index.tsx
src/ui/pages/template/: index.html  index.tsx
src/ui/pages/tos/: index.tsx
src/ui/pages/trade/: index.tsx  types.ts
src/ui/styles/: variables.less
src/ui/types/: declarations.d.ts  index.ts
src/ui/utils/: api.ts  date.ts  env.ts  index.ts  math.ts
src/utils/: api.ts  geometry.ts  math.ts
tests/api/: conftest.py
tests/api/account/: test_account.py
tests/api/contact/: test_contact.py
tests/api/gym/: test_gym.py
tests/api/model/: test_model.py
tests/api/notify/: test_notify.py
tests/api/preview/: test_preview.py
tests/api/shared/python/: test_models.py  test_utils.py
tests/api/signals/: test_signals.py
tests/api/subscribe/: test_subscribe.py
tests/api/trade/: test_trade.py
util/: aws_exports.sh
