[project]
name = "algotrade-api"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "account-lambda",
    "contact-lambda",
    "gym-lambda",
    "model-lambda",
    "notify-lambda",
    "preview-lambda",
    "signals-lambda",
    "subscribe-lambda",
    "trade-lambda",
]

[dependency-groups]
dev = ["ruff", "pytest", "pytest-xdist", "pytest-cov"]

[tool.uv.sources]
account-lambda = { workspace = true }
contact-lambda = { workspace = true }
gym-lambda = { workspace = true }
model-lambda = { workspace = true }
notify-lambda = { workspace = true }
preview-lambda = { workspace = true }
signals-lambda = { workspace = true }
subscribe-lambda = { workspace = true }
trade-lambda = { workspace = true }

[tool.uv.workspace]
members = [
    "src/api/shared-core",
    "src/api/shared-db",
    "src/api/account",
    "src/api/contact",
    "src/api/gym",
    "src/api/model",
    "src/api/notify",
    "src/api/preview",
    "src/api/signals",
    "src/api/subscribe",
    "src/api/trade",
]

[tool.pytest.ini_options]
# Parallel execution disabled - tests have sequential dependencies
# addopts = "-n auto"
testpaths = ["src/api/test"]

[tool.coverage.run]
source = ["src/api"]
omit = ["**/test/*", ".venv/*", "src/api/trade/app.py", "src/api/shared/python/auth.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
target-version = "py314"
line-length = 88
exclude = [
    ".aws-sam",
    ".venv",
    "*.ipynb",
    "test.py",
    "fix_account.py", 
    "send_email.py",
    "chance_of_profit.py",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations (type hints)
    "D",      # pydocstyle (docstrings)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "ANN401", # dynamically typed expressions (Any)
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package
    "D203",   # 1 blank line required before class docstring (conflicts with D211)
    "D213",   # multi-line docstring summary should start at second line (conflicts with D212)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/test/*" = ["ANN", "D", "F405", "F403"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
