[project]
name = "api"
version = "1.0.0"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = ["ruff", "pytest", "pytest-xdist", "pytest-cov"]
# Shared base dependencies
base = ["boto3>=1.34.16"]
db = ["boto3>=1.34.16", "pynamodb>=5.5.1"]
# Lambda-specific dependency groups
trade = ["boto3>=1.34.16", "robin-stocks>=3.4.0", "python-jose>=3.3.0", "requests>=2.28.1"]
account = ["boto3>=1.34.16", "pynamodb>=5.5.1", "stripe>=5.0.0"]
contact = ["boto3>=1.34.16", "pynamodb>=5.5.1"]
gym = ["boto3>=1.34.16", "pynamodb>=5.5.1", "pandas"]
model = ["boto3>=1.34.16", "numpy>=1.26.0"]
notify = ["boto3>=1.34.16", "pynamodb>=5.5.1", "jinja2>=3.1.2", "requests>=2.28.1"]
preview = ["boto3>=1.34.16", "pynamodb>=5.5.1"]
signals = ["boto3>=1.34.16", "pynamodb>=5.5.1"]
subscribe = ["boto3>=1.34.16", "pynamodb>=5.5.1", "stripe>=5.0.0"]

[tool.pytest.ini_options]
# Parallel execution disabled - tests have sequential dependencies
# addopts = "-n auto"
testpaths = ["src/api/test"]

[tool.coverage.run]
source = ["src/api"]
omit = ["**/test/*", ".venv/*", "src/api/trade/app.py", "src/api/shared/python/auth.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
target-version = "py314"
line-length = 88
exclude = [
    ".aws-sam",
    ".venv",
    "*.ipynb",
    "test.py",
    "fix_account.py", 
    "send_email.py",
    "chance_of_profit.py",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations (type hints)
    "D",      # pydocstyle (docstrings)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "ANN401", # dynamically typed expressions (Any)
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package
    "D203",   # 1 blank line required before class docstring (conflicts with D211)
    "D213",   # multi-line docstring summary should start at second line (conflicts with D212)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/test/*" = ["ANN", "D", "F405", "F403"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
